fix: colocando overflow:auto para a possibilidade de ter scroll

--- a/tournament-app/src/app/app.component.css
+++ b/tournament-app/src/app/app.component.css
@@ -10,6 +10,7 @@
 }
 
 #background-color {
+  overflow: auto;
   position: absolute;
   width: 100vw;
   height: 100vh;
